Fixed some alignment and navbar names

--- a/style.css
+++ b/style.css
@@ -51,8 +51,9 @@
 
 
 
-/*Log In/Sign Up
+/*Login/Signup*/
 #Mainform{
     text-align: center;
+    position: relative;
+    left: 37%;
 }
-*/
